lambda initial generation